<resources>
    <string name="app_name">Housemate</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email_1">Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="sign_up">Sign Up</string>
    <string name="dot">•</string>
    <string name="home">Home</string>
    <string name="logo">Logo</string>
    <string name="logout">logout</string>
    <string name="you_have_logged_in">You have logged in!</string>
    <string name="family">Family</string>
    <string name="create_or_join">Create or join a family</string>
    <string name="family_name">Family Name</string>
    <string name="enter_a_name_for_your_family">Enter a name for your family</string>
    <string name="invite_code">Invite Code</string>
    <string name="enter_your_invite_code">Enter your invite code</string>
    <string name="continue_text">Continue</string>
    <string name="family_icon">Family Icon</string>
    <string name="create_icon">Create Icon</string>

    <string name="chores">Chores</string>
    <string name="chore_name">Chore name</string>
    <string name="chore_date">Chore date</string>
    <string name="add_chore">Add Chore</string>
    <string name="add_bill">Add Bill</string>
    <string name="bill_date">Enter due date</string>
    <string name="bill_amount">Enter amount</string>
    <string name="bill_assign">Assign to</string>
    <string name="bill_title">Enter title</string>
    <string name="bills">Bills</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_item">enter item</string>
    <string name="save_item">save item</string>
    <string name="calendar_image_description">calendar image description</string>
    <string name="tomorrow">tomorrow</string>
    <string name="next_week">next week</string>
    <string name="today">today</string>
    <string name="due_date">due date</string>
    <string name="shopping_text">shopping text</string>
    <string name="fab">fab</string>
    <string name="textview">TextView</string>
    <string name="bill_date_string">bill_date</string>
    <string name="bill_assignee_string">bill_assignee</string>
    <string name="bill_title_string">bill_title</string>
    <string name="_10">10$</string>
    <string name="family_members_subtitle">Manage your family members</string>
    <string name="settings">Settings</string>
    <string name="remove_member">Remove Member</string>
    <string name="shopping_item">shopping item</string>
    <string name="enter_chore">enter a chore</string>
    <string name="due_day">Due Day</string>
    <string name="x">X</string>
    <string name="del">← del</string>
    <string name="calendar">Calendar</string>
    <string name="got_it">Got It</string>
    <string name="bills_instructions">You are able to view the bills that have been assigned to you by an admin in your family. To pay a bill, simply swipe left. To add a bill, refer to the + button at the bottom of the page.</string>
    <string name="instructions">Instructions</string>
    <string name="got_it_">GOT IT!</string>
    <string name="adding_items">To add an item to the shopping list, refer to the + button. You can also view the current date via a calendar under the item input section.</string>
    <string name="delete_items_info">To delete the items you have purchased from the list, simply select the trash button and it will remove all of the items you have purchased and place them in the activity section. If you add an item by mistake, simply swipe it away and it will be gone!</string>
    <string name="deleting_item_s">Deleting item(s)</string>
    <string name="adding_an_item">Adding an item</string>
    <string name="list">List</string>
    <string name="activity">Activity</string>
    <string name="username">username</string>
    <string name="name">name</string>
    <string name="chat">Chat</string>
    <string name="change_name">Change Name</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_new_name">Enter your new name</string>
    <string name="update">Update</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="log_out">Log Out</string>
    <string name="enter_message">Enter message</string>
    <string name="type_here">Type here...</string>
    <string name="deleting_items_info_text">To check items off the list, you can tick them off as you purchase them. Once the plus button has been selected, all of the checked items will have been set to be bought by that family member. These items will then be placed in the activity list for review and can be permanently deleted from here.</string>
    <string name="bought_info_list">Once an item has been bought and added to the activity list, it will also appear in the Activity section and show who purchased each item(s).</string>
    <string name="leave_family">Leave Family</string>
    <string name="bought">Bought</string>

</resources>