<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <!--Housemate Logo-->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_gravity="center"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="38dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/logo">
    </ImageView>

    <!--Page Title-->
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/familyTitle"
            android:text="@string/family"
            android:textColor="@color/black"
            android:fontFamily="@font/cocogoose"
            android:textSize="36sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/familyDot"
            android:text="@string/dot"
            android:textColor="@color/orange"
            android:textSize="48sp"
            android:layout_toRightOf="@+id/familyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/familyTitle">
        </TextView>

    </RelativeLayout>

    <!--Text-->
    <TextView
        android:id="@+id/familySubtitleText"
        android:text="@string/create_or_join"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingLeft="5dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">
    </TextView>


    <!--Title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

        <ImageButton
            android:id="@+id/familyCreateButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/rounded_button_black"
            android:tint="#323232"
            app:srcCompat="@drawable/ic_outline_create_24"
            android:contentDescription="@string/create_icon">

        </ImageButton>

        <ImageButton
            android:id="@+id/familyJoinButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_button_black"
            android:tint="#323232"
            app:srcCompat="@drawable/ic_baseline_family_restroom_24"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/family_icon">
        </ImageButton>

    </RelativeLayout>

    <TextView
        android:id="@+id/familyInputTitle"
        android:text="@string/family_name"
        android:textSize="12sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <!--Input Field-->
    <EditText
        android:id="@+id/familyInputEditText"
        android:hint="@string/enter_a_name_for_your_family"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="">
    </EditText>

    <Button
        android:id="@+id/familyContinueButton"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_bold"
        android:background="@drawable/orange_button"
        app:backgroundTint="@color/orange"
        android:layout_marginBottom="130dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </Button>












</LinearLayout>