<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <!--Housemate Logo-->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_gravity="center"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="38dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/logo">
    </ImageView>

    <!--Page Title-->
    <RelativeLayout
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loginText"
            android:text="@string/login"
            android:textColor="@color/black"
            android:fontFamily="@font/cocogoose"
            android:textSize="36sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/dot"
            android:text="@string/dot"
            android:textColor="@color/orange"
            android:textSize="48sp"
            android:layout_toRightOf="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/loginText">
        </TextView>

    </RelativeLayout>

    <!--Email-->
    <TextView
        android:id="@+id/emailTitle"
        android:text="@string/email"
        android:textSize="12sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <AutoCompleteTextView
        android:id="@+id/editEmailLogin"
        android:hint="@string/enter_your_email"
        android:background="@drawable/rounded_edittext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </AutoCompleteTextView>

    <!--Password-->
    <!--Title-->
    <TextView
        android:id="@+id/passwordTitle"
        android:text="@string/password"
        android:textSize="12sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <!--Input Field-->
    <AutoCompleteTextView
        android:id="@+id/editPasswordLogin"
        android:hint="@string/enter_your_password"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </AutoCompleteTextView>

    <!--Login Button-->
    <Button
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_bold"
        android:background="@drawable/orange_button"
        app:backgroundTint="@color/orange"
        android:layout_marginBottom="130dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>

    <!--Footer-->
    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Text-->
        <TextView
            android:id="@+id/noAccount"
            android:text="@string/don_t_have_an_account"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <!--Sign Up Button-->
        <Button
            android:id="@+id/signUpButton"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="0dp"
            android:layout_toEndOf="@+id/noAccount"
            android:layout_toRightOf="@+id/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>

    </RelativeLayout>








</LinearLayout>