<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".ChoresActivity">

    <RelativeLayout
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loginTitleTextView"
            android:text="@string/chores"
            android:textColor="@color/black"
            android:fontFamily="@font/cocogoose"
            android:textSize="36sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/loginDot"
            android:text="@string/dot"
            android:textColor="@color/orange"
            android:textSize="48sp"
            android:layout_toRightOf="@+id/loginTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/loginTitleTextView">
        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="60dp"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/familyCreateButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_button_black"
                android:tint="#323232"
                app:srcCompat="@drawable/ic_baseline_checkroom_24"
                android:contentDescription="@string/create_icon">
            </ImageButton>

            <TextView
                android:text="@string/chores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>

    </RelativeLayout>


    <!--Input Field-->
    <AutoCompleteTextView
        android:id="@+id/choresChoreNameInput"
        android:hint="@string/chore_name"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </AutoCompleteTextView>

    <!--Input Field-->
    <AutoCompleteTextView
        android:id="@+id/choresChoreDateInput"
        android:hint="@string/chore_date"
        android:background="@drawable/rounded_edittext"
        android:inputType="date"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </AutoCompleteTextView>

    <!--Login Button-->
    <Button
        android:id="@+id/choresAddChoreButton"
        android:text="@string/add_chore"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_bold"
        android:background="@drawable/orange_button"
        app:backgroundTint="@color/orange"
        android:layout_marginBottom="130dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>





</LinearLayout>